feat: send telegram message from dashboard

--- a/index.html
+++ b/index.html
@@ -100,7 +100,7 @@
                         <div class="grow">
                             
                         </div>
-                        <button class="p-2 px-4 text-white bg-slate-600 rounded-lg h-10 shadow-slate-400 shadow-inner hover:bg-slate-700 active:bg-slate-400">NOTIFY</button>
+                        <button class="p-2 px-4 text-white bg-slate-600 rounded-lg h-10 shadow-slate-400 shadow-inner hover:bg-slate-700 active:bg-slate-400" onclick="sendTelegramMsg()">NOTIFY</button>
                         <button class="p-2 px-4 text-green-700 bg-green-400 rounded-lg h-10 shadow-green-200 shadow-inner hover:bg-green-500 active:bg-green-400">HARVEST</button>
                         <button class="p-2 px-4 text-orange-800 bg-orange-400 rounded-lg h-10 shadow-orange-300 shadow-inner hover:bg-orange-500 active:bg-orange-400">RETURN</button>
                         <button class="p-2 px-4 text-red-800 bg-red-400 rounded-lg h-10 shadow-red-300 shadow-inner hover:bg-red-700 active:bg-red-400">STOP</button>
