feat: added ui features on web page

--- a/index.html
+++ b/index.html
@@ -9,7 +9,11 @@
     </head>
     <body>
         <script src="./main.js"></script> 
+        <!-- <div class="absolute flex w-full h-screen bg-opacity-80 filter bg-black z-50" id="modal-box">
+            <div class="opacity-100 m-auto h-1/2 rounded-md bg-white shadow-md w-2/3 lg:w-1/2"></div>
+        </div> -->
         <div class="w-full h-screen flex">
+        
         <div class="flex flex-row w-full m-auto h-full">
             <div class="w-fit">
             <div class="w-80 h-full shadow shadow-lg text-center border select-none p-2">
